# mcp

./: README.md  package.json
.github/workflows/: ci.yml  publish.yml
.wemake/: align_agents.sh  configure_agents.sh  configure_agents_fixed.sh  tasks.json  update_agents.sh
.wemake/agents/: Code_Review.md  Deployment.md  Development.md  Documentation.md  Feature_Requests.md  Feedback.md  Orchestration.md  PRD_Building.md  Prompt_Template.md  Roadmap_Planning.md  Testing.md  Troubleshooting.md
scripts/: release.py
src/agent-collaboration/: README.md  index.ts  package.json  vitest.config.ts
src/analogical-reasoning/: package.json
src/bias-detection/: package.json
src/collaborative-reasoning/: package.json
src/constraint-solver/: package.json
src/decision-framework/: package.json
src/deep-thinking/: package.json
src/ethical-reasoning/: package.json
src/focus-group/: package.json
src/gmail/: README.md  docker-compose.yml  filter-examples.md  llms-install.md  package.json  setup.js  smithery.yaml
src/goal-tracker/: package.json
src/knowledge-graph-memory/: package.json
src/memory/: package.json
src/metacognitive-monitoring/: package.json
src/multimodal-synthesizer/: package.json
src/narrative-planner/: package.json
src/scientific-method/: package.json
src/summon/: ERROR.md  ERROR_SIMPLE.md  README.md  TIMEOUT.md  __init__.py  __main__.py  constants.py  consultation.py  file_processor.py  pyproject.toml  server.py  token_utils.py  tool_definitions.py
src/summon/providers/: __init__.py  base.py  google.py  openai.py
(+42 files in other folders)
