[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summon"
version = "1.3.0"
description = "MCP server for consulting large context window models to analyze extensive file collections"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Stefan Szeider", email = "stefan@szeider.net"}
]
keywords = ["mcp", "llm", "code-analysis", "large-context"]
dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.28.1",
    "google-genai>=1.19.0",
    "openai>=1.88.0",
]

[project.urls]
Homepage = "https://wemake.cx"
Repository = "https://github.com/WeMake-AI/mcp"
Issues = "https://github.com/WeMake-AI/mcp/issues"

[project.scripts]
summon = "summon.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/summon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "anthropic>=0.52.0",  # For MCP testing support
]

[tool.ruff]
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "T201",   # flake8-print: print found
]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow print statements in test files
"tests/**/*.py" = ["T201"]
# Allow print statements in server.py for CLI output and test mode
"src/summon/server.py" = ["T201"]
